--- a/src/app/domains/user-settings/user-settings.component.css
+++ b/src/app/domains/user-settings/user-settings.component.css
@@ -195,6 +195,17 @@
   box-shadow: 0 0 10px #000;
 }
 
+.error__message {
+  margin-top: 0.25rem;
+  font-size: .8rem;
+  color: white;
+  padding: .5rem;
+  text-align: center;
+  background-color: var(--error);
+  border-radius: 10px;
+  font-family: var(--source3-text-font);
+}
+
 /* ===================================================================================================
   Desktop Navbar
 =================================================================================================== */
