--- a/src/app/domains/home/home.component.html
+++ b/src/app/domains/home/home.component.html
@@ -35,9 +35,9 @@
 
     <section class="main__top-experiences">
         <div class="top-experiences__container">
-            <div class="top-experiences__card" [routerLink]="['/experience', experiences()[0]._id]">
+            <div class="top-experiences__card" [routerLink]="['/experience', experiences()[0]?._id]">
                 <img class="top-experiences__background"
-                    [src]=" 'http://localhost:3000/uploads/' + experiences()[0].images[3]">
+                    [src]=" 'http://localhost:3000/uploads/' + experiences()[0]?.images[3]">
                 <div class="top-experiences__card-content">
                     <div class="top-experiences__profile-image">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="white"
@@ -48,13 +48,13 @@
                         </svg>
                     </div>
 
-                    <h3 class="top-experiences__title">{{ experiences()[0].name }}</h3>
+                    <h3 class="top-experiences__title">{{ experiences()[0]?.name }}</h3>
                 </div>
                 <div class="top-experiences__backdrop"></div>
             </div>
-            <div class="top-experiences__card" [routerLink]="['/experience', experiences()[2]._id]">
+            <div class="top-experiences__card" [routerLink]="['/experience', experiences()[2]?._id]">
                 <img class="top-experiences__background"
-                    [src]=" 'http://localhost:3000/uploads/' + experiences()[2].images[1]">
+                    [src]=" 'http://localhost:3000/uploads/' + experiences()[2]?.images[1]">
                 <div class="top-experiences__card-content">
                     <div class="top-experiences__profile-image">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="white"
@@ -65,13 +65,13 @@
                         </svg>
                     </div>
 
-                    <h3 class="top-experiences__title">{{ experiences()[2].name }}</h3>
+                    <h3 class="top-experiences__title">{{ experiences()[2]?.name }}</h3>
                 </div>
                 <div class="top-experiences__backdrop"></div>
             </div>
-            <div class="top-experiences__card" [routerLink]="['/experience', experiences()[1]._id]">
+            <div class="top-experiences__card" [routerLink]="['/experience', experiences()[1]?._id]">
                 <img class="top-experiences__background"
-                    [src]=" 'http://localhost:3000/uploads/' + experiences()[1].images[0]">
+                    [src]=" 'http://localhost:3000/uploads/' + experiences()[1]?.images[0]">
                 <div class="top-experiences__card-content">
                     <div class="top-experiences__profile-image">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="white"
@@ -82,7 +82,7 @@
                         </svg>
                     </div>
 
-                    <h3 class="top-experiences__title">{{ experiences()[1].name }}</h3>
+                    <h3 class="top-experiences__title">{{ experiences()[1]?.name }}</h3>
                 </div>
                 <div class="top-experiences__backdrop"></div>
             </div>
@@ -93,12 +93,12 @@
 
     <section class="mobile-experiences__list">
 
-        <app-mobile-top-experience [routerLink]="['/experience', experiences()[0]._id]" [title]="experiences()[0].name"
-            [price]="experiences()[0].price" [description]="experiences()[0].description"
-            [image]="experiences()[0].images[0]" [place]="experiences()[0].place" />
-        <app-mobile-top-experience [routerLink]="['/experience', experiences()[4]._id]" [title]="experiences()[4].name"
-            [price]="experiences()[4].price" [description]="experiences()[4].description"
-            [image]="experiences()[4].images[0]" [place]="experiences()[4].place" />
+        <app-mobile-top-experience [routerLink]="['/experience', experiences()[0]?._id]" [title]="experiences()[0]?.name"
+            [price]="experiences()[0]?.price" [description]="experiences()[0]?.description"
+            [image]="experiences()[0]?.images[0]" [place]="experiences()[0]?.place" />
+        <app-mobile-top-experience [routerLink]="['/experience', experiences()[4]?._id]" [title]="experiences()[4]?.name"
+            [price]="experiences()[4]?.price" [description]="experiences()[4]?.description"
+            [image]="experiences()[4]?.images[0]" [place]="experiences()[4]?.place" />
 
 
     </section>
@@ -121,7 +121,7 @@
 
     </section>
 
-    <button [routerLink]="'/'" class="experiences__button">Check out all Experiences</button>
+    <button [routerLink]="'/locations'" class="experiences__button">Check out all Experiences</button>
 
     <h2 class="main__top-products-title gallery-title">Check our gallery!</h2>
 
@@ -133,18 +133,18 @@
             <div class="main__gallery__cards">
                 <label class="main__gallery__card" for="item-1" id="experience-1">
                     <img class="main__gallery__card__image"
-                        [src]=" 'http://localhost:3000/uploads/' + experiences()[0].images[2]" alt="experience">
-                    <div class="image-info">{{ experiences()[0].name }}</div>
+                        [src]=" 'http://localhost:3000/uploads/' + experiences()[0]?.images[2]" alt="experience">
+                    <div class="image-info">{{ experiences()[0]?.name }}</div>
                 </label>
                 <label class="main__gallery__card" for="item-2" id="experience-2">
                     <img class="main__gallery__card__image"
-                        [src]=" 'http://localhost:3000/uploads/' + experiences()[1].images[3]" alt="experience">
-                    <div class="image-info">{{ experiences()[1].name }}</div>
+                        [src]=" 'http://localhost:3000/uploads/' + experiences()[1]?.images[3]" alt="experience">
+                    <div class="image-info">{{ experiences()[1]?.name }}</div>
                 </label>
                 <label class="main__gallery__card" for="item-3" id="experience-3">
                     <img class="main__gallery__card__image"
-                        [src]=" 'http://localhost:3000/uploads/' + experiences()[2].images[2]" alt="experience">
-                    <div class="image-info">{{ experiences()[2].name }}</div>
+                        [src]=" 'http://localhost:3000/uploads/' + experiences()[2]?.images[2]" alt="experience">
+                    <div class="image-info">{{ experiences()[2]?.name }}</div>
                 </label>
             </div>
         </div>
