--- a/src/app/domains/locations/locations.component.css
+++ b/src/app/domains/locations/locations.component.css
@@ -1,5 +1,5 @@
 .main {
-  max-width: 1700px;
+  max-width: 1800px;
   margin: 0 auto;
   margin-top: 4rem;
   display: flex;
@@ -42,15 +42,63 @@
 }
 
 .search-bar-container__results {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   width: 100%;
-  max-width: 820px;
+  max-width: 790px;
   background-color: var(--white-bg);
   border-radius: 10px;
   border: solid 1px black;
   padding: 0.7rem;
   top: 50px;
   z-index: 1000;
+  font-family: var(--source3-text-font);
+  padding-bottom: 1rem;
+}
+
+.search-bar-container__results p {
+  font-size: clamp(.8rem, 1vw, 1.2rem);
+  font-family: var(--arvo-subtitle-font);
+  padding-bottom: .8rem;
+}
+
+.search-bar-container__results ul {
+  display: flex;
+  flex-direction: column;
+}
+
+.search-bar-container__results div {
+  border: 1px solid #000;
+  padding: .5rem .2rem;
+  border-left: none;
+  border-right: none;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: all .3s ease;
+}
+
+.search-bar-container__results div:hover {
+  background-color: #e8d5d5;
+}
+
+.search-bar-container__results img {
+  width: 3%;
+  min-width: 1.5rem;
+}
+
+.search-bar-container__results div:first-child {
+  border-top: 2px solid #000;
+}
+
+.search-bar-container__results div:last-child {
+  border-bottom: 2px solid #000;
+}
+
+.search-bar-container__results span {
+  color: grey;
+  font-size: .8rem;
 }
 
 /* ===================================================================================================
@@ -62,8 +110,8 @@
   flex-direction: column;
 }
 
-.locations-list a{
-    cursor: pointer;
+.locations-list a {
+  cursor: pointer;
 }
 
 /* ===================================================================================================
@@ -108,7 +156,7 @@
 }
 
 .booking__title {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .booking__date span,
@@ -146,11 +194,18 @@
 }
 
 /* ===================================================================================================
+  Map Section
+=================================================================================================== */
+
+.map-container {
+  display: none;
+}
+
+/* ===================================================================================================
     Responsive
 =================================================================================================== */
 
 @media (min-width: 768px) {
-
   .booking__icon {
     max-width: 9rem;
   }
@@ -161,42 +216,41 @@
 }
 
 @media (min-width: 1024px) {
-    
-    .main {
-        margin-top: 5rem;
-    }
+  .main {
+    margin-top: 5rem;
+  }
 
-    .main-area {
-        display: grid;
-        grid-template-columns: 1.2fr 1.5fr;
-        margin-bottom: 2rem;
-    }
+  .main-area {
+    display: grid;
+    grid-template-columns: 1.2fr 1.5fr;
+    margin-bottom: 2rem;
+  }
 
-    .locations__container {
-        border-right: 2px solid #000;
-        padding: 1rem 2rem;
-    }
+  .locations__container {
+    border-right: 2px solid #000;
+    padding: 1rem 2rem;
+  }
 
-    .locations-list {
-        max-height: 30rem;
-        overflow-y: scroll;
-        border-radius: 10px;
-        padding: .5rem;
-        border: 3px solid #000;
-        border-radius: 10px;
-        scrollbar-color: rgb(41, 41, 41) transparent;
-    }
+  .locations-list {
+    max-height: 30rem;
+    overflow-y: scroll;
+    border-radius: 10px;
+    padding: 0.5rem;
+    border: 3px solid #000;
+    border-radius: 10px;
+    scrollbar-color: rgb(41, 41, 41) transparent;
+  }
 
-    .map-container {
-        border-left: 2px solid #000;
-        padding: 1rem 2rem;
-    }
+  .map-container {
+    display: block;
+    border-left: 2px solid #000;
+    padding: 1rem 2rem;
+  }
 
-    .map {
-        width: 100%;
-        height: 100%;
-        border-radius: 10px;
-        border: 3px solid #000;
-    }
-
+  .map {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    border: 3px solid #000;
+  }
 }
