--- a/src/app/domains/locations/locations.component.html
+++ b/src/app/domains/locations/locations.component.html
@@ -3,10 +3,22 @@
 <main class="main">
 
     <form class="search-bar-container">
-        <input type="text" name="searchQuery" class="search-bar-container__input" placeholder="Search...">
+        <input type="text" autocomplete="off" [formControl]="searchQuery" name="searchQuery" class="search-bar-container__input"
+            placeholder="Search...">
         <button class="search-bar-container__search__button" type="submit">
             <img class="search-bar-container__search" src="assets/img/Search.svg" alt="Search icon">
         </button>
+        <div *ngIf="filteredExperiences().length && searchQuery.value" class="search-bar-container__results">
+            <p>Search Results for "{{ searchQuery.value }}"</p>
+            <ul>
+                @for (experience of filteredExperiences(); track experience._id) {
+                    <div [routerLink]="['/experience', experience._id]">
+                        <li>{{ experience.name }} · <span> {{ experience.place }}</span></li>
+                        <img src="assets/img/right-arrow.svg" alt="right arrow">
+                    </div>
+                }
+            </ul>
+        </div>
     </form>
 
     <section class="main-area">
@@ -14,22 +26,23 @@
             <section class="locations-list">
 
                 @for (experience of experiences(); track experiences()._id) {
-                    <a [routerLink]="['/experience', experience._id]">
-                        <article class="booking__card">
+                <a [routerLink]="['/experience', experience._id]">
+                    <article class="booking__card">
 
-                            <img class="booking__icon" [src]=" 'http://localhost:3000/uploads/' + experience.images[0]" alt="experience icon">
-                        
-                            <div class="booking-container">
-                                <p class="booking__title">{{ experience.name }}</p>
-                                <p class="booking__price">${{ experience.price }}</p>
-                                <p class="booking__place">{{ experience.place }}</p>
-                                <p class="booking__date"> <span>Rate: </span> 5.0</p>
-                            </div>
-                        
-                        </article>
-                    </a>
+                        <img class="booking__icon" [src]=" 'http://localhost:3000/uploads/' + experience.images[0]"
+                            alt="experience icon">
+
+                        <div class="booking-container">
+                            <p class="booking__title">{{ experience.name }}</p>
+                            <p class="booking__price">${{ experience.price }}</p>
+                            <p class="booking__place">{{ experience.place }}</p>
+                            <p class="booking__date"> <span>Rate: </span> 5.0</p>
+                        </div>
+
+                    </article>
+                </a>
                 }
-                
+
             </section>
         </div>
 
