--- a/src/app/domains/home/home.component.html
+++ b/src/app/domains/home/home.component.html
@@ -12,7 +12,7 @@
                     class="main-area__highlight">TREKANGLE!</span></h1><br class="apart__desktop">
             <p class="main-area__quote">"ad lorem impsum"</p>
             <div class="main-area__buttons">
-                <button [routerLink]="'/'" class="button button--outline">Book experiences</button>
+                <button [routerLink]="'/locations'" class="button button--outline">Book experiences</button>
                 <button [routerLink]="'/sign-up'" class="button button--primary">Join Us</button>
             </div>
         </div>
