--- a/src/app/domains/experience-page/experience-page.component.html
+++ b/src/app/domains/experience-page/experience-page.component.html
@@ -1,46 +1,62 @@
 <app-header />
 
 <main class="container">
-  <div class="title-bar">{{ experience()?.name }}</div>
-  <div class="image-row">
+  <div class="title-bar">
+    <h1>EXPERIENCE NAME</h1>
+  </div>
+
+  <div class="images">
     <img
       [src]="'http://localhost:3000/uploads/' + experience()?.images[0]"
       alt="Main Image"
       class="main-image"
     />
-    <img
-      [src]="'http://localhost:3000/uploads/' + experience()?.images[1]"
-      alt="Thumbnail 1"
-      class="thumbnail"
-    />
-    <img
-      [src]="'http://localhost:3000/uploads/' + experience()?.images[2]"
-      alt="Thumbnail 2"
-      class="thumbnail"
-    />
-    <img
-      [src]="'http://localhost:3000/uploads/' + experience()?.images[3]"
-      alt="Thumbnail 3"
-      class="thumbnail"
-    />
+    <div class="second-images">
+      <img
+        [src]="'http://localhost:3000/uploads/' + experience()?.images[1]"
+        alt="Image 1"
+      />
+      <img
+        [src]="'http://localhost:3000/uploads/' + experience()?.images[2]"
+        alt="Image 2"
+      />
+      <img
+        [src]="'http://localhost:3000/uploads/' + experience()?.images[3]"
+        alt="Image 3"
+        class="wide-image"
+      />
+    </div>
   </div>
-  <div class="description">
-    <p>{{ experience()?.name }}</p>
-    <p>PRICE: ${{ experience()?.price }}</p>
-    <p>lugar: {{ experience()?.place }}</p>
-    <p>{{ experience()?.description }}</p>
+
+  <div class="content">
+    <div class="description">
+      <h2>Experience name</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci sint
+        consectetur quod distinctio culpa, aliquid expedita nostrum dolorem
+        illum ratione nam aperiam suscipit consequatur dolor magnam. Quos,
+        placeat unde. Quisquam.
+      </p>
+    </div>
+    <div class="details">
+      <p>{{ experience()?.name }}</p>
+      <p><img src="Us Dollar Circled.svg" alt="Price Icon" /> $50,000</p>
+      <p>lugar: {{ experience()?.place }}</p>
+      <p>{{ experience()?.description }}</p>
+    </div>
   </div>
+
   <div class="button-container">
-    <button class="buy-now" (click)="addToCart(experience())">Buy Now</button>
-    <button class="buy-now" (click)="addToCart(experience())">
+    <button
+      class="buy-now"
+      (cliclk)="addToCart(experience())"
+      [routerLink]="'/checkout'"
+    >
+      Buy now
+    </button>
+    <button class="add-to-cart" (click)="addToCart(experience())">
       Add to Cart
     </button>
-  </div>
-  <div class="comments-section">
-    <p>COMMENTS</p>
-    <div class="comment-icon"></div>
-    <input type="text" />
-    <input type="submit" value="Submit" />
   </div>
 </main>
 
