--- a/src/app/domains/experience-page/experience-page.component.css
+++ b/src/app/domains/experience-page/experience-page.component.css
@@ -1,155 +1,203 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-  }
-  
-  body {
-    background-image: url('/main_bg.png');
+*:not(app-header) {
+  box-sizing: border-box;
+}
 
-  }
-  
-  .container {
-    padding: 20px;
+.name {
+  display: none;
+}
+
+.main {
+  margin-top: 6.5rem;
+  display: flex;
+  flex-direction: column;
+  padding: 0 1rem;
+}
+
+.title-bar {
+  font-family: var(--mochiy-title-font);
+  text-transform: uppercase;
+  font-size: clamp(1.2rem, 2.5vw, 1.7rem);
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.images {
+  order: 2;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  margin: 0 0.5rem;
+  margin-bottom: 3rem;
+}
+
+.images img {
+  border: 2px solid black;
+}
+
+.details {
+  margin-bottom: 2rem;
+}
+
+.detail__container {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.detail__container img {
+  width: 7%;
+  min-width: 2rem;
+}
+
+.detail__container p {
+  font-size: clamp(1rem, 2vw, 1.2rem);
+  font-family: var(--arvo-subtitle-font);
+}
+
+.detail__container input {
+  font-family: var(--arvo-subtitle-font);
+  font-size: clamp(0.8rem, 1.5vw, 1rem);
+  background-color: rgb(215, 210, 202);
+  padding: 0.4rem 0.8rem;
+  border-radius: 7px;
+  border: 1px solid black;
+}
+
+.button-container {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.buy-now,
+.add-to-cart {
+  background-color: var(--main-green);
+  padding: 0.6rem 1.2rem;
+  border: 1px solid black;
+  cursor: pointer;
+  border-radius: 5px;
+  font-family: var(--arvo-subtitle-font);
+  color: white;
+  transition: all 0.3s ease;
+  margin-top: 0.7rem;
+}
+
+.buy-now:hover,
+.add-to-cart:hover {
+  background-color: rgb(51, 119, 51);
+}
+
+.description {
+  margin-bottom: 2rem;
+  font-family: var(--arvo-subtitle-font);
+}
+
+/* ===================================================================================================
+  RESPONSIVE
+=================================================================================================== */
+
+@media (min-width: 1024px) {
+
+  .main {
+    margin: 0 auto;
     margin-top: 6.5rem;
+    max-width: 1750px;
+    width: 100%;
+    padding: 0 1rem;
   }
-  
+
   .title-bar {
-    background-color: #e0e0e0;
-    border: 3px solid black;
-    padding: 10px;
-    width: fit-content;
-    margin-bottom: 20px;
-    margin-left: 30px;
-    border-radius: 30px;
+    text-align: start;
+    margin-bottom: 0;
   }
-  
+
   .images {
+    order: 1;
+    margin: 0;
+    width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr; 
-    gap: 2px; 
-    margin-bottom: 20px;
+    max-width: 1700px;
+    max-height: 27rem;
+    margin-top: 2rem;
+    padding-bottom: 3rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 50% 50%;
+    grid-template-areas:
+      "main-image main-image image-2 image-3"
+      "main-image main-image image-4 image-4";
+    gap: 1rem;
+    border-bottom: 3px solid black;
+    margin-bottom: 0;
   }
-  
-  .main-image {
-    max-width: 100%; 
-    height: auto; 
-    border-radius: 30px;
-    margin-left: 40px;
+
+  .images img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border: 3px solid black;
   }
-  
-  .second-images {
-    display: grid;
-    grid-template-columns: repeat (2, 1fr); 
-    gap: 20px; 
-    margin-left: 100px;
-    width: 70%;
+
+  .images img:first-child {
+    grid-area: main-image;
+    object-fit: unset;
   }
-  
-  .second-images img {
-    width: 90%; 
-    height: auto; 
-    border-radius: 30px;
+
+  .images img:nth-child(2) {
+    grid-area: image-2;
   }
-  
-  .wide-image {
-    grid-column: span 3; 
+
+  .images img:nth-child(3) {
+    grid-area: image-3;
   }
-  
-  .wide-image img{
-    width: 70%; 
-    height: 40px; 
+
+  .images img:nth-child(4) {
+    grid-area: image-4;
   }
 
   .content {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+    order: 2;
+    margin: 1.5rem 0;
+    display: grid;
+    grid-template-columns: 0.99fr 1fr;
   }
-  
+
   .description {
-    width: 60%;
-    background-color: #ffffff77;
-    border: 1px solid black;
-    padding: 10px;
-    border-radius: 10px;
-    text-align: center bottom;
-  }
-  
-  .details {
-    width: 35%;
-    background-color: #ffffff77;  
-    border: 1px solid black;
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .details p {
-    margin: 10px 0;
-  }
-  
-  .icon {
-    margin-right: 10px;
-  }
-  
-  .button-container {
     display: flex;
-    justify-content: center;
-    gap: 10px;
-  }
-  
-  button {
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .buy-now {
-    background-color: #4CAF50;
-    color: white;
-  }
-  
-  .add-to-cart {
-    background-color: #4CAF50;
-    color: white;
+    flex-direction: column;
+    border-right: 1.5px solid black;
+    padding-top: 1.5rem;
+    padding-right: 1.2rem;
+    margin-bottom: 0;
   }
 
-  .buy-now:hover {
-    background-color: #4CAF50;
-    border: 2px solid black;
-}
-
-.add-to-cart:hover {
-    background-color: #4CAF50;
-    border: 2px solid black;
-}
-  
-  @media (max-width: 768px) {
-    .title-bar {
-      width: fit-content;
-    }
-  
-    .images {
-      grid-template-columns: 1fr; 
-    }
-  
-    .thumbnails {
-      grid-template-columns: 1fr; 
-    }
-  
-    .wide-image {
-      grid-column: span 1; 
-    }
-  
-    .content {
-      flex-direction: column;
-    }
-  
-    .description,
-    .details {
-      width: 100%;
-      margin-bottom: 10px;
-    }
+  .name {
+    display: inline;
+    font-size: clamp(0.9rem, 2vw, 1.2rem);
+    margin-bottom: 1.5rem;
   }
+
+  .details,
+  .description {
+    margin-bottom: 2rem;
+  }
+
+  .details {
+    padding: 1.5rem;
+    padding-top: 1.5rem;
+    padding-left: 3.5rem;
+    border-left: 1.5px solid black;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+  }
+
+  .detail__container {
+    margin-bottom: 0;
+  }
+
+  .button-container {
+    margin-top: 0rem;
+  }
+}
